SAGE-1164: simple policy control

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,12 @@ services:
       tokenInfoEndpoint: ${tokenInfoEndpoint}
       tokenInfoUser: ${tokenInfoUser}
       tokenInfoPassword: ${tokenInfoPassword}
+
+      policyRestrictedNodes: "abc,bca"
+      policyRestrictedTaskSubstrings: "bottom,street"
+
+      policyRestrictedUsername: "user"
+      policyRestrictedPassword: "secret"
     volumes:
       - ${PWD}:/app
 
