--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,5 +15,7 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.17
+      - name: Test Go build
+        run: go build
       - name: Run all Go tests
         run: go test
