--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,7 +30,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: waggle/${{ github.event.repository.name }}:${{ env.RELEASE_VERSION }}
           build-args: "RELEASE_VERSION=${{ env.RELEASE_VERSION }}"
