--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Setup Go
         uses: actions/setup-go@v4
+        with:
+          go-version: 1.20
       - name: Test Go build
         run: go build
       - name: Run all Go tests
